# anilist-tui

./: .SRCINFO  .gitignore  PKGBUILD  README.md  install.sh  pyproject.toml
src/anilist_tui/: __init__.py  api.py  app.css  app.py  app_core.py  auth.py  config.py  screens.py  widgets.py
